--- a/FindingRedundantTestExamples.tex
+++ b/FindingRedundantTestExamples.tex
@@ -76,12 +76,16 @@ U ovoj sekciji će biti izneti osnovni eksperimenti koje smo vršili kako bismo 
 
 Najpre, pokušaćemo sa dodavanjem nekoliko jednostavnih primera, koji su, pre svega, jednostavni za analizu, a potom ćemo posmatrati ponašanje primenom različitih test primera, od kojih će neki biti redudantni.
 
-\subsubsection{Maksimum 4 broja}
-Prvi primer koji posmatramo je otkrivanje maksimuma 4 broja. Kod je napisan u programskom jeziku C.
+\subsubsection{Maksimum i minimum 4 broja}
+Prvi primer koji posmatramo je otkrivanje maksimuma i minimuma 4 broja. Kod je napisan u programskom jeziku C.
 
 \lstinputlisting[language=C]{1_max4.c}
 
 Sada, kreirajmo neke test primere:
+\begin{verbatim}
+Ulaz: 4 3 2 1  
+Izlaz: 4 1
+\end{verbatim}
 
 \section{Zaključak}
 \label{sec:zakljucak}
