Added titles to sections.

--- a/FindingRedundantTestExamples.tex
+++ b/FindingRedundantTestExamples.tex
@@ -87,6 +87,15 @@ Ulaz: 4 3 2 1
 Izlaz: 4 1
 \end{verbatim}
 
+\section{Alati}
+\label{sec:tools}
+
+U ovoj sekciji će biti predstavljeni alati korišćeni za analizu.
+
+\section{LLVM}
+\label{sec:llvm}
+
+
 \section{Zaključak}
 \label{sec:zakljucak}
 
